name:                reflex-xhb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adrianparvino/ISMISViewer#readme
license:             GPL-3
license-file:        LICENSE
author:              Adrian Parvin D. Ouano
maintainer:          adrianparvino@gmail.com
copyright:           2017 Adrian Parvin D. Ouano
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable xhbmonad
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base 
                     , pointless-fun
                     , reflex
                     , reflex-xhb
                     , xhb
                     , containers
                     , mtl
                     , transformers

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.XHB
                     , Reflex.XHB.Util
  build-depends:       base >= 4.7 && < 5
                     , reflex
                     , xhb
                     , containers
                     , dependent-sum
                     , either
                     , monad-loops
                     , mtl
                     , pointless-fun
                     , primitive
                     , ref-tf
                     , stm
                     , these
                     , transformers
  default-language:    Haskell2010